# managing-intelligence-experiments

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  RELEASE  RUN.md  pyproject.toml
analysis/: README.md  __init__.py  correlations.py  gemini_smoke.py  h1.py  h5.py  h7.py  h8.py  judge_gemini.py  judge_gemini_batch.py  quality.py
docs/: SPEC.md  charter.md  fixture-freeze-2026-06-21.md  live-verification-2026-06-16.md  live-verification-2026-06-16.raw.json  live-verification-judge-2026-06-28.md  load-band-reference.md  phase1a-report.md  phase1c-judge-spec.md  phase1c-report.md  phase1d-build-notes.md  phase1d-judge-spec.md  phase1d-report.md  product-vision.md
fixtures/: README.md  manifest-phase1c.yaml  manifest-phase1d.yaml  manifest.yaml
harness/: README.md  __init__.py  assemble.py  client.py  config.py  expand.py  fixtures.py  guard.py  hashing.py  run.py  runner.py  schema.py  skeleton_demo.py  verify_live.py
prices/: prices-2026-06.yaml
results/: README.md
runs/: phase0-calibration.yaml  phase0.yaml  phase1a.yaml  phase1c-pilot.yaml  phase1c.yaml  phase1d-pilot.yaml  phase1d.yaml
scripts/: build_public_mirror.py
tests/: conftest.py  test_analysis_correlations.py  test_analysis_h1.py  test_analysis_h5.py  test_analysis_quality.py  test_assemble.py  test_client.py  test_config.py  test_contract_hardening.py  test_expand.py  test_fixtures.py  test_guard.py  test_h7.py  test_h8.py  test_judge_gemini.py  test_judge_gemini_batch.py  test_neutral_arm.py  test_phase1c.py  test_phase1d_pilot.py  test_phase1d_quality.py  (+5 more)
(+141 files in other folders)
