[project]
name = "managing-intelligence-experiment1"
version = "0.1.0"
description = "Experiment 1 harness — a token-cost variance measurement instrument (tests H1)."
requires-python = ">=3.12"
dependencies = [
    "anthropic", # official SDK — owns retries/streaming/headers; version stamped per record
    "pydantic>=2", # the capture contract + config validation
    "pyyaml>=6", # runs/*.yaml, manifest.yaml, prices/*.yaml
    "python-dotenv>=1", # load .env
    "pandas>=2", # analysis (Phase 6)
    "matplotlib>=3.8", # distribution/tail plots (Phase 6)
    "google-genai>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "black",
]

[tool.uv]
# Not an installable package — uv just manages the venv + locked deps.
package = false

[tool.pytest.ini_options]
# harness/ is a top-level package (no src layout); put repo root on the path so
# `import harness.schema` resolves when pytest runs from anywhere in the tree.
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]
